# newslab-geom-algo

./: Cargo.toml  LICENSE.txt  README.md
src/: centroid.rs  close_point_pair_2d.rs  haversine.rs  intersection.rs  kabsch.rs  lib.rs  types.rs
